--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!--шапка сайта (навигация, контакты)-->
     <header>
     <!-- Навигация на другие страницы -->
+        <div class="container">
         <nav>
         <a href="index.html" class="logo" lang="en"> <span class="logo-begin">Web</span><span class="logo-end">Studio</span>
         </a>
@@ -27,11 +28,14 @@
                 <li> <a href="" class="link" >Контакты</a></li>
             </ul>
         </nav> 
+        </div>
     <!--Контакты-->
+            <div class="container">
             <ul class="contacts-nav list" >
                 <li> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li> <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
-            </ul>     
+            </ul> 
+            </div>
     </header>
 <!--Основная часть-->
     <main>
