добавил margin для 1-й стр.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </section>
         <!--Наши особенности-->
         <section class="peculiarities">
+            <div class="container">
             <ul>
                 <li>
                     <h3 class="peculiarities-title">Внимание к деталям</h3>
@@ -63,9 +64,11 @@
                     <p class="peculiarities-text" >Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+            </div>
         </section>
 <!--Чем занимаемся-->
         <section class="work">
+            <div class="container">
             <h2 class="work-title">Чем мы занимаемся</h2>
             <ul>
                 <li>
@@ -78,6 +81,7 @@
                     <img src="images/img2.jpg" alt="планшет" width="370"/>
                 </li>
             </ul>
+            </div>
         </section>   
 <!--Состав команды-->
         <section class="team">
