--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /><meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" /><meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
     <header>
     <!-- Навигация на другие страницы -->
         <div class="container">
-        <nav>
+        <nav class="block-nav">
         <a href="index.html" class="logo" lang="en"> <span class="logo-begin">Web</span><span class="logo-end">Studio</span>
         </a>
         
@@ -40,7 +40,7 @@
 <!--Основная часть-->
     <main>
         <section class="hero">
-            <h1 class="hero-title"> Эффективные решения для вашего бизнеса </h1>
+            <h1 class="hero-title"> Эффективные решения <br> для вашего бизнеса </h1>
             <button class="hero-button" type="button"> Заказать услугу </button>  
         </section>
         <!--Наши особенности-->
@@ -85,6 +85,7 @@
         </section>   
 <!--Состав команды-->
         <section class="team">
+            <div class="container">
             <h2 class="team-title"> Наша команда </h2>
             <ul>
                 <li>
@@ -108,11 +109,13 @@
                     <p class="team-position" >UI Designer</p>   
                 </li>
             </ul>
+        </div>
         </section>
     </main>
 <!--Footer-->
   <footer class="footer">
-    <a href="index.html" class="logofooter" lang="en"> <span class="logofooter-begin">Web</span><span class="logofooter-end">Studio</span>
+    <div class="container">
+        <a href="index.html" class="logofooter" lang="en"> <span class="logofooter-begin">Web</span><span class="logofooter-end">Studio</span>
     </a>
 
         <address class="adress-nav list">
@@ -122,6 +125,7 @@
                 <li> <a href="tel:+380961111111" class="adress-link"> +38 096 111 11 11 </a></li>
             </ul>
         </address>
+    </div>
   </footer>  
 </body>
 </html>
