--- a/portfolio.html
+++ b/portfolio.html
@@ -2,9 +2,6 @@
 <html lang="ru">
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +9,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
@@ -21,27 +21,31 @@
     <!--шапка сайта (навигация, контакты)-->
     <header>
         <!-- Навигация на другие страницы -->
-        <nav>
-            <a href="index.html" class="logo" lang="en"> <span class="logo-begin">Web</span><span
-                    class="logo-end">Studio</span>
+        <div class="container">
+            <nav>
+            <a href="index.html" class="logo" lang="en"> <span class="logo-begin">Web</span><span class="logo-end">Studio</span>
             </a>
-
-            <ul class="site-nav list">
-                <li> <a href="./index.html" class="link">Студия</a></li>
-                <li> <a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li> <a href="" class="link">Контакты</a></li>
-            </ul>
-        </nav>
+            
+                <ul class="site-nav list">
+                    <li> <a href="./index.html" class="link">Студия</a></li>
+                    <li> <a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li> <a href="" class="link" >Контакты</a></li>
+                </ul>
+            </nav> 
+            </div>
         <!--Контакты-->
-        <ul class="contacts-nav list">
-            <li> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li> <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
-        </ul>
-    </header>
+                <div class="container">
+                <ul class="contacts-nav list" >
+                    <li> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                    <li> <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
+                </ul> 
+        </div>
+        </header>
     <!--Оснавная часть-->
     <main>
 <!--Фильтры-->
-        <section>
+<div class="container">
+        <section class="portfolio">
             <h2 class="fiter"> Фильтры </h2>
             <ul>
                 <li>
@@ -109,22 +113,22 @@
                 </li>
             </ul>
         </section>
+    </div>
     </main>
     <!--Footer-->
-<footer class="footer">
-    <a href="index.html" class="logofooter" lang="en"> <span class="logofooter-begin">Web</span><span
-            class="logofooter-end">Studio</span>
-    </a>
-
-    <address class="adress-nav list">
-        <ul>
-            <li> <a class="map-link" href="https://goo.gl/maps/T9Uk6Swt6Qx7hAkc7" target="blank"
-                    rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li> <a href="mailto:info@devstudio.com" class="adress-link"> info@devstudio.com </a></li>
-            <li> <a href="tel:+380961111111" class="adress-link"> +38 096 111 11 11 </a></li>
-        </ul>
-    </address>
-</footer>
+    <footer class="footer">
+        <div class="container">
+            <a href="index.html" class="logofooter" lang="en"> <span class="logofooter-begin">Web</span><span class="logofooter-end">Studio</span>
+        </a>
     
+            <address class="adress-nav list">
+                <ul>
+                    <li> <a class="map-link" href="https://goo.gl/maps/T9Uk6Swt6Qx7hAkc7" target="blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li> <a href="mailto:info@devstudio.com" class="adress-link"> info@devstudio.com </a></li>
+                    <li> <a href="tel:+380961111111" class="adress-link"> +38 096 111 11 11 </a></li>
+                </ul>
+            </address>
+        </div>
+    </footer> 
 </body>
 </html>
