--- a/index.html
+++ b/index.html
@@ -15,51 +15,50 @@
 </head>
 <body>
     <!--шапка сайта (навигация, контакты)-->
-    <header>
+    <header class="page-header">
     <!-- Навигация на другие страницы -->
         <div class="container">
-        <nav class="block-nav">
+        <nav class="site-main-nav">
         <a href="index.html" class="logo" lang="en"> <span class="logo-begin">Web</span><span class="logo-end">Studio</span>
         </a>
         
             <ul class="site-nav list">
-                <li> <a href="./index.html" class="link">Студия</a></li>
-                <li> <a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li> <a href="" class="link" >Контакты</a></li>
+                <li class="item"> <a href="./index.html" class="link">Студия</a></li>
+                <li class="item"> <a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li class="item"> <a href="" class="link" >Контакты</a></li>
             </ul>
-        </nav> 
-        </div>
+         
     <!--Контакты-->
-            <div class="container">
-            <ul class="contacts-nav list" >
-                <li> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li> <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
+            <ul class="contacts-nav list list" >
+                <li class="item"> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"> <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
             </ul> 
-            </div>
+        </nav>
+        </div>
     </header>
 <!--Основная часть-->
     <main>
         <section class="hero">
-            <h1 class="hero-title"> Эффективные решения <br> для вашего бизнеса </h1>
+            <h1 class="hero-title"> Эффективные решения для вашего бизнеса </h1>
             <button class="hero-button" type="button"> Заказать услугу </button>  
         </section>
         <!--Наши особенности-->
-        <section class="peculiarities">
+        <section class="peculiarities section">
             <div class="container">
-            <ul>
-                <li>
+            <ul class="peculiarities-list list">
+                <li class="item">
                     <h3 class="peculiarities-title">Внимание к деталям</h3>
                     <p class="peculiarities-text" >Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="peculiarities-title">Пунктуальность</h3>
                     <p class="peculiarities-text" >Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="peculiarities-title">Планирование</h3>
                     <p class="peculiarities-text" >Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="peculiarities-title">Современные технологии</h3>
                     <p class="peculiarities-text" >Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -67,43 +66,43 @@
             </div>
         </section>
 <!--Чем занимаемся-->
-        <section class="work">
+        <section class="work section">
             <div class="container">
             <h2 class="work-title">Чем мы занимаемся</h2>
-            <ul>
-                <li>
+            <ul class="work-list list">
+                <li class="item">
                     <img src="images/img.jpg" alt="компьютер" width="370"/>
                 </li>
-                <li>
+                <li class="item">
                     <img src="images/img1.jpg" alt="смартфон" width="370"/>
                 </li>
-                <li>
+                <li class="item">
                     <img src="images/img2.jpg" alt="планшет" width="370"/>
                 </li>
             </ul>
             </div>
         </section>   
 <!--Состав команды-->
-        <section class="team">
+        <section class="team section">
             <div class="container">
             <h2 class="team-title"> Наша команда </h2>
-            <ul>
-                <li>
+            <ul class="team-list list">
+                <li class="item">
                     <img src="images/img(1).jpg" alt="Игорь Демьяненко" width="270"/>
                     <h3 class="team-member">Игорь Демьяненко</h3>
                     <p class="team-position" >Product Designer</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="images/img(2).jpg" alt="Ольга Репина" width="270"/>
                     <h3 class="team-member">Ольга Репина</h3>
                     <p class="team-position" >Frontend Developer</p> 
                 </li>
-                <li>
+                <li class="item">
                     <img src="images/img(3).jpg" alt="Николай Тарасов" width="270"/>
                     <h3 class="team-member">Николай Тарасов</h3>
                     <p class="team-position" >Marketing</p>   
                 </li>
-                <li>
+                <li class="item">
                     <img src="images/img(4).jpg" alt="Михаил Ермаков" width="270"/>
                     <h3 class="team-member">Михаил Ермаков</h3>
                     <p class="team-position" >UI Designer</p>   
@@ -115,14 +114,16 @@
 <!--Footer-->
   <footer class="footer">
     <div class="container">
+        <div class="logoftr">
         <a href="index.html" class="logofooter" lang="en"> <span class="logofooter-begin">Web</span><span class="logofooter-end">Studio</span>
     </a>
+        </div>
 
         <address class="adress-nav list">
-            <ul>
-                <li> <a class="map-link" href="https://goo.gl/maps/T9Uk6Swt6Qx7hAkc7" target="blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li> <a href="mailto:info@devstudio.com" class="adress-link"> info@devstudio.com </a></li>
-                <li> <a href="tel:+380961111111" class="adress-link"> +38 096 111 11 11 </a></li>
+            <ul class="adress-list list">
+                <li class="item"> <a class="map-link" href="https://goo.gl/maps/T9Uk6Swt6Qx7hAkc7" target="blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="item"> <a href="mailto:info@devstudio.com" class="adress-link"> info@devstudio.com </a></li>
+                <li class="item"> <a href="tel:+380961111111" class="adress-link"> +38 096 111 11 11 </a></li>
             </ul>
         </address>
     </div>
