--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 <!--Основная часть-->
     <main>
         <section class="hero">
-            <h1 class="hero-title"> Эффективные решения для вашего бизнеса </h1>
-            <button class="hero-button" type="button"> Заказать услугу </button>  
+            <div class="container">
+                <h1 class="hero-title"> Эффективные решения для вашего бизнеса </h1>
+                <button type="button" class="hero-button"> Заказать услугу </button>  
+            </div>
         </section>
         <!--Наши особенности-->
         <section class="peculiarities section">
