--- a/portfolio.html
+++ b/portfolio.html
@@ -46,91 +46,90 @@
         <section class="portfolio section">
             <h2 class="filter"> Фильтры </h2>
             <div class="container">
-            <ul class="filter-list list">
-                <li class="item">
-                    <button class="filter-btn" type="button"> Все </button>
-                </li>
-                <li class="item">
-                    <button class="filter-btn" type="button"> Веб-сайты </button>
-                </li>
-                <li class="item">
-                    <button class="filter-btn" type="button"> Приложения </button>
-                </li>
-                <li class="item">
-                    <button class="filter-btn" type="button"> Дизайн </button>
-                </li>
-                <li class="item">
-                    <button class="filter-btn" type="button"> Маркетинг </button>
-                </li>
-            </ul>
-            </div>
-            <h2 class="proposal"> Предложения</h2>
-            <div class="container">
-            <ul class="proposal-list list">
-                <li class="item">
-                    <img src="./images/port.img.jpg" alt="ноутбук" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Технокряк</h3>
-                        <p class="proposal-text" >Веб-сайт</p>
-                    </div>    
-                </li>
-                <li class="item">
-                    <img src="./images/port.img1.jpg" alt="два баскетболиста" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Постер New Orlean vs Golden Star</h3>
-                        <p class="proposal-text" >Дизайн</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./images/port.img2.jpg" alt="название ресторана" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Ресторан Seafood</h3>
-                        <p class="proposal-text" >Приложение</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./images/port.img3.jpg" alt="наушники" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Проект Prime</h3>
-                        <p class="proposal-text" >Маркетинг</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./images/port.img4.jpg" alt="две коробки" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Проект Boxes</h3>
-                        <p class="proposal-text" >Приложение</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./images/port.img5.jpg" alt="монитор" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Inspiration has no Borders</h3>
-                        <p class="proposal-text" >Веб-сайт</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./images/port.img6.jpg" alt="открытая книга" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Издание Limited Edition</h3>
-                        <p class="proposal-text" >Дизайн</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./images/port.img7.jpg" alt="ярлык" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Проект LAB</h3>
-                        <p class="proposal-text" >Маркетинг</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./images/port.img8.jpg" alt="человек печатает на ноутбуке" width="370" height="294">
-                    <div class="title">
-                        <h3 class="proposal-title" >Growing Business</h3>
-                        <p class="proposal-text" >Приложение</p>
-                    </div>
-                </li>
-            </ul>
+                <ul class="filter-list list">
+                    <li class="item">
+                        <button class="filter-btn" type="button"> Все </button>
+                    </li>
+                    <li class="item">
+                        <button class="filter-btn" type="button"> Веб-сайты </button>
+                    </li>
+                    <li class="item">
+                        <button class="filter-btn" type="button"> Приложения </button>
+                    </li>
+                    <li class="item">
+                        <button class="filter-btn" type="button"> Дизайн </button>
+                    </li>
+                    <li class="item">
+                        <button class="filter-btn" type="button"> Маркетинг </button>
+                    </li>
+                </ul>
+                
+                <h2 class="proposal"> Предложения</h2>
+                <ul class="proposal-list list">
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img.jpg" alt="ноутбук" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Технокряк</h3>
+                            <p class="proposal-text" >Веб-сайт</p>
+                        </div>    
+                    </li>
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img1.jpg" alt="два баскетболиста" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Постер New Orlean vs Golden Star</h3>
+                            <p class="proposal-text" >Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img2.jpg" alt="название ресторана" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Ресторан Seafood</h3>
+                            <p class="proposal-text" >Приложение</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img3.jpg" alt="наушники" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Проект Prime</h3>
+                            <p class="proposal-text" >Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img4.jpg" alt="две коробки" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Проект Boxes</h3>
+                            <p class="proposal-text" >Приложение</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img5.jpg" alt="монитор" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Inspiration has no Borders</h3>
+                            <p class="proposal-text" >Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img6.jpg" alt="открытая книга" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Издание Limited Edition</h3>
+                            <p class="proposal-text" >Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img7.jpg" alt="ярлык" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Проект LAB</h3>
+                            <p class="proposal-text" >Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a class="link" href=""> <img src="./images/port.img8.jpg" alt="человек печатает на ноутбуке" width="370" height="294"> </a>
+                        <div class="card-title">
+                            <h3 class="proposal-title" >Growing Business</h3>
+                            <p class="proposal-text" >Приложение</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
