--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
             <div class="container">
             <h2 class="work-title">Чем мы занимаемся</h2>
             <ul class="work-list list">
-                <li class="item">
+                <li class="work-item">
                     <img src="images/img.jpg" alt="компьютер" width="370"/>
                 </li>
-                <li class="item">
+                <li class="work-item">
                     <img src="images/img1.jpg" alt="смартфон" width="370"/>
                 </li>
-                <li class="item">
+                <li class="work-item">
                     <img src="images/img2.jpg" alt="планшет" width="370"/>
                 </li>
             </ul>
@@ -89,22 +89,22 @@
             <div class="container">
             <h2 class="team-title"> Наша команда </h2>
             <ul class="team-list list">
-                <li class="item">
+                <li class="team-item">
                     <img src="images/img(1).jpg" alt="Игорь Демьяненко" width="270"/>
                     <h3 class="team-member">Игорь Демьяненко</h3>
                     <p class="team-position" >Product Designer</p>
                 </li>
-                <li class="item">
+                <li class="team-item">
                     <img src="images/img(2).jpg" alt="Ольга Репина" width="270"/>
                     <h3 class="team-member">Ольга Репина</h3>
                     <p class="team-position" >Frontend Developer</p> 
                 </li>
-                <li class="item">
+                <li class="team-item">
                     <img src="images/img(3).jpg" alt="Николай Тарасов" width="270"/>
                     <h3 class="team-member">Николай Тарасов</h3>
                     <p class="team-position" >Marketing</p>   
                 </li>
-                <li class="item">
+                <li class="team-item">
                     <img src="images/img(4).jpg" alt="Михаил Ермаков" width="270"/>
                     <h3 class="team-member">Михаил Ермаков</h3>
                     <p class="team-position" >UI Designer</p>   
